# VulkanSC-Tools

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml
.github/workflows/: build.yml  tools.yml  tools_sc.yml
build-gn/: generate_vulkan_layers_json.py
cube/: cube.c  cube.cpp
cube-vksc/: CMakeLists.txt  README.md  bin_to_c_hex_array.cmake  cube.c  cube.pc.json  logo.ppm.h  object_type_string_helper.h  pipeline_cache.h  uuid_from_json.cmake
devsim/: .clang-format  CMakeLists.txt  README.md  VkSCLayer_khronos_device_simulation.def  VkSCLayer_khronos_device_simulation.json.in  profiles.h  profiles_generated.cpp  profiles_settings.cpp  profiles_settings.h  profiles_util.h
icd/: CMakeLists.txt  VkICD_mock_icd.json.in  VkICD_mock_icd_vksc.def  VkICD_mock_icd_vksc.json.in
icd/generated-vksc/: function_declarations.h  function_definitions.h  mock_icd.cpp  mock_icd.h  vk_typemap_helper.h
icd/linux/: VkICD_mock_icd_vksc.json
icd/macos/: VkICD_mock_icd_vksc.json
icd/windows/: VkICD_mock_icd_vksc.json
sccube/: CMakeLists.txt  cube.c  cube.frag.spv  cube.pc.json  cube.vert.spv  uuid_from_json.cmake
scripts/: CMakeLists.txt  generate_source.py  image_to_ppm_header.py  known_good.json  kvt_genvk.py  mock_icd_generator.py  update_deps.py  vulkaninfo_generator.py
scripts/generators/: mock_icd_generator.py  vulkaninfo_generator.py
scripts/gn/: generate_vulkan_icd_json.py
tests/: CMakeLists.txt
vulkaninfo/: CMakeLists.txt  volk_sc_compat.h  vulkaninfo.cpp  vulkaninfo.h  vulkaninfo.md  vulkaninfo_functions.h
vulkaninfo/generated-vksc/: vulkaninfo.hpp
